add batch requests; cache hottest/coldest
